# casper

./: .gitattributes  .gitignore  LICENSE  README.md  Untitled.ipynb  main.py  model.py  pyproject.toml  requirements.txt  runner.ipynb  test_chat_engine.py
docs/: help.md
examples/llms/: fine_tuning_rl.ipynb
scripts/: download_models.sh  setup_llamacpp.sh  start_ai.sh  start_lobe.sh  start_openweb.sh
src/: README.md  agent.py  app.py  chat.py  completion.py  connectors.py  constants.py  core.py  extractor.py  indexer.py  loaders.py  models.py  requirements.txt  requirements_chat.txt  router.py  sample.py  setup.sh  storage.py  test_rag.py  utils.py
src/agents/: README.md  main.py  requirements.txt  sample_basic_with_tools.py
src/app/: package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
src/incubator/: agentarium.py  generate_image.py  mm_chat.py  rag_completion.py  research_team.py  roast_battle.py
src/language/: README.md  agent.py  chat.py  completion.py  connectors.py  constants.py  core.py  database.py  embedder.py  explore.ipynb  extractor.py  indexer.py  instructor.py  loaders.py  main.py  models.py  requirements.txt  requirements_base.txt  requirements_lab.txt  requirements_train.txt  sample.py  setup.sh  storage.py
src/models/: completion.py  embeddings.py
src/pipelines/: arxiv_downloader.py  markdown_convertor.py
src/processors/: connectors.py  extractor.py  indexer.py  loaders.py
src/requirements/: requirements_chat.txt
src/simulation/: agent.py  environment.py  (+5 more)
tests/: test_connectors.py  test_models.py
(+77 files in other folders)
